k8s/frontend/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemyst-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
      - name: alchemyst-frontend
        image: alchemyst-frontend:SET_BY_CI
        ports:
        - name: http
          containerPort: 8080
        - name: metrics
          containerPort: 9145
        workingDir: /app
        securityContext:
          runAsNonRoot: true
          runAsUser: 101
          runAsGroup: 101
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache-volume
        - mountPath: /var/run/nginx
          name: pid-volume
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: pid-volume
        emptyDir: {}
      restartPolicy: Always
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
