k8s/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alchemyst-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
